# artoolkit6-calibration-android

./: .gitignore  README.md  release.py
Source/artoolkit6-dependency/include/AR6/: AR6_c.h  ARController.h  ARTrackable.h  ARTrackable2D.h  ARTrackableAppearance.h  ARTrackableInstantOn.h  ARTrackableMultiSquare.h  ARTrackableSquare.h  ARTracker.h  ARTracker2D.h  ARTrackerInstantOn.h  ARTrackerSquare.h  ARVideoSource.h  ARView.h  Error.h  Platform.h
Source/artoolkit6-dependency/include/AR6/AR/: ar.h  arConfig.h  arFilterTransMat.h  arImageProc.h  arMulti.h  config.h  icp.h  icpCalib.h  icpCore.h  matrix.h  param.h  paramGL.h
Source/artoolkit6-dependency/include/AR6/ARG/: arg.h  (+3 more)
Source/camera-calibration/: local.properties
Source/camera-calibration/ARToolKit_CameraCalibration/: CMakeLists.txt  build.gradle
Source/camera-calibration/ARToolKit_CameraCalibration/src/main/: AndroidManifest.xml
Source/camera-calibration/ARToolKit_CameraCalibration/src/main/cpp/: calib_camera.cpp  calib_camera.h  fileUploader.cpp  fileUploader.h
Source/camera-calibration/ARToolKit_CameraCalibration/src/main/java/org/artoolkit/ar6/calib_camera/: CalibCameraPreferences.java  CalibrationDetails.java  CalibrationResult.java  CameraCalibrationActivity.java  CameraCalibrator.java  OnCameraFrameRender.java  SplashActivity.java
Source/camera-calibration/ARToolKit_CameraCalibration/src/main/java/org/artoolkit/ar6/calib_camera/guide/: CalibrationGuide.java  CalibrationGuideListener.java
Source/camera-calibration/ARToolKit_CameraCalibration/src/main/java/org/artoolkit/ar6/calib_camera/menu/: MenuArrayAdapter.java
Source/camera-calibration/ARToolKit_CameraCalibration/src/main/java/org/artoolkit/ar6/calib_camera/share/: ShareActivity.java  ShareCalibrationsArrayAdapter.java
Source/camera-calibration/ARToolKit_CameraCalibration/src/main/java/org/artoolkit/ar6/calib_camera/utils/: ImageButtonDisable.java  RotationConverters.java
Source/camera-calibration/ARToolKit_CameraCalibration/src/main/java/org/artoolkit/ar6/camera_calibration/: CalibCameraPreferences.java  CameraCalibrationActivity.java  OnCameraFrameRender.java  SplashActivity.java
Source/camera-calibration/ARToolKit_CameraCalibration/src/main/java/org/artoolkit/ar6/camera_calibration/guide/: CalibrationGuide.java
Source/camera-calibration/ARToolKit_CameraCalibration/src/main/java/org/artoolkit/ar6/camera_calibration/share/: ShareActivity.java  ShareCalibrationsArrayAdapter.java
Source/camera-calibration/ARToolKit_CameraCalibration/src/main/java/org/artoolkit/ar6/camera_calibration/utils/: ImageButtonDisable.java  RotationConverters.java
Source/camera-calibration/ARToolKit_CameraCalibration/src/main/jni/: Android.mk  Application.mk  calib_camera.cpp  fileUploader.cpp  fileUploader.h
Source/camera-calibration/ARToolKit_CameraCalibration/src/main/res/drawable/: ic_assistant_white_24px.xml  ic_camera_white_24px.xml  ic_chart_black_24px.xml  ic_cloud_print.xml  ic_delete_forever_white_24px.xml  ic_done_white_24px.xml  ic_error_white_24px.xml  ic_help_outline_black_24px.xml  ic_menu_white_48px.xml  ic_transform_black_24px.xml  ic_transform_white_48px.xml  oval_shape_gray.xml
Source/camera-calibration/ARToolKit_CameraCalibration/src/main/res/layout/: activity_calibration_details.xml  activity_share.xml  menu_list_item.xml  share_list_item.xml  upload_status_layout.xml
Source/camera-calibration/ARToolKit_CameraCalibration/src/main/res/values/: strings.xml
Source/camera-calibration/ARToolKit_CameraCalibration/src/main/res/xml/: preferences.xml
Source/camera-calibration/gradle/wrapper/: gradle-wrapper.properties
Source/camera-calibration/openCVLibrary310/: build.gradle
camera-calibration/: settings.gradle
camera-calibration/ARToolKit_CameraCalibration/: build.gradle
camera-calibration/gradle/wrapper/: gradle-wrapper.properties
camera-calibration/openCVLibrary310/: build.gradle
media/: splashLogo.xcf
(+49 files in other folders)
